# JustInsight

./: .dockerignore  .gitignore  bbc_world.xml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  readme.md  requirements.txt
.docker/: Dockerfile  entrypoint.sh
.docker/.devcontainer/: devcontainer.json
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: backlog.yml  config.yml  issue_template.yml
.github/workflows/: test.yml
data/: project_plan.md
data/raw/: saved_hashes.json
data/raw/bbc/: 2025-06-22_caught-in-the-crossfire-the-victims-of-cape-town-s-gang-warfare.json  2025-06-22_decoy-flights-and-seven-b-2-stealth-bombers-how-us-says-it-hit-iran-s-nuclear-sites.json  2025-06-22_how-a-self-styled-knight-giving-away-cars-and-wads-of-cash-got-people-talking.json  2025-06-22_how-china-made-electric-vehicles-mainstream.json  2025-06-22_lyse-doucet-what-the-us-and-iran-do-next-could-be-momentous.json  (+80 more)
scripts/: clear_db.sh
src/: celerybeat-schedule.bak
src/ingest/: ap_ingestor.py  ap_rss.py  base_ingestor.py  bbc_ingestor.py  bbc_rss.py  cbs_ingestor.py  cbs_rss.py  cnn_ingestor.py  cnn_rss.py  latimes_ingestor.py  latimes_rss.py  nbc_ingestor.py  nbc_rss.py  npr_ingestor.py  npr_rss.py  nyt_ingestor.py  nyt_login.py  nyt_rss.py  save_to_database.py  usnews_ingestor.py  usnews_rss.py
src/justInsight/: celery.py  tasks.py
src/justinsight/: celery.py  nlpthings.py  streamlitapp.py  tasks.py
src/nlp/: README.md  cli.py  core.py  requirements.txt  tasks.py
src/nlp/tests/: test_cli.py  test_core.py  (+1 more)
tests/: test_rssFeeds.py  test_trivial.py
